print line added for code review